Upgraded to the new driver and added the graph fluent api jar to the pom.

--- a/northwind/code/pom.xml
+++ b/northwind/code/pom.xml
@@ -6,9 +6,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>dse-driver</artifactId>
-            <version>1.1.2</version>
+            <groupId>com.datastax.dse</groupId>
+            <artifactId>dse-java-driver-core</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.datastax.dse</groupId>
+            <artifactId>dse-java-driver-graph</artifactId>
+            <version>1.2.3</version>
         </dependency>
     </dependencies>
 </project>
