--- a/fraud/fraud-mapping.groovy.config
+++ b/fraud/fraud-mapping.groovy.config
@@ -1,1 +1,2 @@
+name: "source", type: String, defaultValue: "", description: "The source type (e.g. file, db) from which the graph data to be loaded."
 name: "inputpath", type: String, defaultValue: "", description: "The location of the graph data to be loaded."
