--- a/killrvideo/dsl/dotnet/KillrVideo/KillrVideo.csproj
+++ b/killrvideo/dsl/dotnet/KillrVideo/KillrVideo.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gremlin.Net" Version="3.3.0-rc1" />
+    <PackageReference Include="Gremlin.Net" Version="3.3.1" />
     <PackageReference Include="Dse" Version="2.1.0" />
   </ItemGroup>
 
