rename final jar to fraud.jar

--- a/fraud/JavaFluentAPI/pom.xml
+++ b/fraud/JavaFluentAPI/pom.xml
@@ -25,6 +25,10 @@
 
     </dependencies>
 
+  <properties>
+    <jar.finalName>fraud</jar.finalName>
+  </properties>
+         
     <build>
         <plugins>
             <plugin>
