--- a/northwind/code/pom.xml
+++ b/northwind/code/pom.xml
@@ -15,5 +15,10 @@
             <artifactId>dse-java-driver-graph</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 </project>
